<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="ime_name">The Safety Keyboard</string>
    <string name="spell_checker_settings">The Safety Keyboard by Moto Speller Settings</string>
    <string name="copyright_text">Copyright\u0020©\u0020<xliff:g id="year">%d</xliff:g>\u0020<xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g>\u0020(v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="menu_home_item">Home</string>
    <string name="how_to_pointer_title">The Safety Keyboard by Moto</string>
    <string name="how_to_pointer_not_app">The Safety Keyboard by Moto is not a regular application - it is a on-screen keyboard
        replacement.
    </string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">%s</xliff:g>\u0020\u0020</string>
    <string name="ime_name_beta">The Safety Keyboard by Moto BETA</string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="testers_version">Testers build!</string>
    <string name="languages_cat">Languages</string>
    <string name="safety_keyboard_intro_1">The Safety Keyboard by Moto isn\'t like any other application.\n It was designed to replace your current keyboard.</string>
    <string name="safety_keyboard_intro_2">In order to use The Safety Keyboard by Moto need to set it up first.</string>
    <string name="safety_keyboard_intro_3">SWIPE TO START</string>
    <string name="changelog">Change Log</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at <i>Google Play Store</i>…</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at <i>Google Play Store</i>…</string>
    <string name="no_market_store_available">Could not find <i>Google Play Store</i> on your device.\nUnable to search for add-ons!</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="close_button">Close</string>
    <string name="added_word">Saved:\u0020<xliff:g id="word">%s</xliff:g>
    </string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:\u0020<xliff:g id="word">%s</xliff:g>
    </string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="ui_group">User interface</string>
    <string-array name="physical_keyboard_change_notification_types">
        <item>Always show layout icon</item>
        <item>On physical keyboard change</item>
        <item>No notification</item>
    </string-array>
    <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
    <string name="voice_input_not_installed_text">Google\'s Voice Input is not installed on your device.\nThat can be easily fixed: install it now from <i>Google Play Store</i>.</string>
    <string name="voice_input_not_installed_action_install">Install</string>
    <string name="voice_input_not_installed_action_do_not_install">No</string>
    <string name="voice_input_not_voice_pack_in_market">I can not find voice input (com.google.android.voicesearch) at <i>Google Play Store</i>. Sorry, voice input will not work on your device.</string>
    <string name="change_ime">Change input method</string>
    <string name="override_dictionary">Override default dictionary</string>
    <string name="override_dictionary_title">Override
        <xliff:g id="word">%s</xliff:g>
        dictionary
    </string>
    <string name="override_dictionary_default">Default</string>
    <string name="override_disabled">Override cleared</string>
    <string name="override_enabled">Overriding to
        <xliff:g id="word">%s</xliff:g>
    </string>
    <string name="gesture_settings">Gestures</string>
    <string name="effects_group">Effects</string>
    <string name="ime_settings">Keyboard settings</string>
    <string name="configure_keyboard">General Configuration</string>
    <string name="vibrate_on_key_press_title">Vibrate on key-press</string>
    <string name="vibrate_on_key_press_summary">Vibration level feedback for key-press. Currently: %s</string>
    <string name="vibrate_on_key_press_dialog_title">Select vibration type</string>
    <string-array name="vibrate_on_key_press_types">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>
    <string name="sound_on">Sound on key-press</string>
    <string name="sound_on_summary">Sound effects on soft keyboard press.</string>
    <string name="sound_off_summary">Sound effects on soft keyboard not press.</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s notifications volume.
    </string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when pressing space</string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to alphabet when pressing space</string>
    <string name="persistent_layout_per_package_id_title">Remember alphabet layout per App</string>
    <string name="persistent_layout_per_package_id_off_summary">Use the same layout for all Apps.</string>
    <string name="persistent_layout_per_package_id_on_summary">Automatically switch to the previous layout used in the App.</string>
    <string name="one_shot_quick_text_popup">Auto close after key</string>
    <string name="one_shot_quick_text_popup_on_summary">Close Quick-Text popup after pressing a key</string>
    <string name="one_shot_quick_text_popup_off_summary">Keep Quick-Text popup open until Close key is pressed</string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is used</string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is used</string>
    <string name="fullscreen_input_connection_supported">Use landscape full-screen</string>
    <string name="fullscreen_input_connection_supported_on_summary">Full-screen input in landscape</string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="menu_even_more_settings">Even more…</string>
    <string name="special_dictionaries_group">Special dictionaries</string>
    <string name="special_dictionaries_group_summary">Suggestion dictionaries used in The Safety Keyboard by Moto</string>
    <string name="use_user_dictionary">User-dictionary</string>
    <string name="use_user_dictionary_on_summary">Suggest user added words (double-click a typed-suggestion to add)</string>
    <string name="use_user_dictionary_off_summary" />
    <string name="always_use_fallback_user_dictionary">Use fallback User-dictionary</string>
    <string name="always_use_fallback_user_dictionary_on_summary">Use only The Safety Keyboard by Moto\'s built-in User-dictionary mechanism (not recommended).</string>
    <string name="always_use_fallback_user_dictionary_off_summary">Try to use Android\'s built-in User-dictionary first (recommended).</string>
    <string name="use_auto_dictionary">Auto dictionary</string>
    <string name="use_auto_dictionary_dialog_title">Select learn method</string>
    <string name="use_auto_dictionary_summary">Automatically learn new words. Learn method: %s</string>
    <string name="use_contacts_dictionary">Contacts dictionary</string>
    <string name="use_contacts_dictionary_on_summary">Suggest names from contacts list</string>
    <string name="use_contacts_dictionary_off_summary" />
    <string name="tweaks_group">Tweaks</string>
    <string name="tweak_physical_keyboard_group">Physical keyboard tweaks</string>
    <string name="tweak_ux_group">Behavior tweaks</string>
    <string name="tweak_dictionary_group">Dictionary tweaks</string>
    <string name="settings_min_length_for_word_correction">Minimum word length for correction</string>
    <string name="use_keyrepeat">Use key repeat</string>
    <string name="use_keyrepeat_on_summary">Key repeat is enabled</string>
    <string name="use_keyrepeat_off_summary">Key repeat is disabled</string>
    <string name="insert_space_after_word_suggestion_selection">Space after candidate pick</string>
    <string name="insert_space_after_word_suggestion_selection_on_summary">Insert space after word suggestion select
    </string>
    <string name="insert_space_after_word_suggestion_selection_off_summary" />
    <string name="cycle_all_symbols_keyboards">Cycle over all symbols</string>
    <string name="cycle_all_symbols_keyboards_on_summary">Symbols key will cycle over all symbols keyboards</string>
    <string name="cycle_all_symbols_keyboards_off_summary">Symbols key will only show main symbols keyboard</string>
    <string name="candidates_on">Show suggestions</string>
    <string name="candidates_on_summary">A list of suggested words will be displayed above the keyboard</string>
    <string name="candidates_off_summary">No suggestions will be shown</string>
    <string name="quick_fix">Quick fixes and abbreviations</string>
    <string name="quick_fix_summary">Corrects commonly typed mistakes, and expands abbreviations</string>
    <string name="keyboards_group_extra_template"><xliff:g id="enabledLayouts">%s</xliff:g>/<xliff:g id="totalLayouts">%s</xliff:g></string>
    <string name="keyboards_group">Keyboards</string>
    <string name="keyboards_group_summary">Keyboard layouts for use in The Safety Keyboard by Moto</string>
    <string name="selected_add_on_summary">Now using \'<xliff:g id="addOnName">%s</xliff:g>\'
    </string>
    <string name="quick_text_keys_group">Quick text keys</string>
    <string name="keyboard_theme_group">Keyboard themes</string>
    <string name="user_dict_editor">Words editor</string>
    <string name="abbreviation_dict_editor">Abbreviation editor</string>
    <string name="should_swap_punctuation_and_space_title">Swap punctuation and space</string>
    <string name="should_swap_punctuation_and_space_summary" />
    <string name="wizard_step_this_step_complete_title">Step done!</string>
    <string name="wizard_step_this_step_complete_text_switched"><i>The Safety Keyboard by Moto</i> is your default keyboard. But, you\'ll probably want to set-up additional things, like themes or languages?</string>
    <string name="wizard_step_swipe_to_next">Swipe to the next page.</string>
    <string name="next_word_dict_settings">Next Word settings</string>
</resources>