<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pp="http://schemas.android.com/apk/res-auto"
    android:key="tweaks_group_screen"
    android:title="@string/tweaks_group">

    <PreferenceCategory
        android:key="tweak_dictionary_group"
        android:title="@string/tweak_dictionary_group">

        <!-- Using this import require an Android Library reference from https://github.com/menny/PushingPixels -->
        <net.evendanan.pushingpixels.SlidePreference
            android:defaultValue="2"
            android:key="@string/settings_key_min_length_for_word_correction__"
            android:persistent="true"
            android:title="@string/settings_min_length_for_word_correction"
            pp:slideMaximum="10"
            pp:slideMinimum="1" />

        <net.evendanan.pushingpixels.ListPreference
            android:defaultValue="@string/settings_default_should_swap_punctuation_and_space"
            android:dialogTitle="@string/should_swap_punctuation_and_space_title"
            android:entries="@array/settings_key_should_swap_punctuation_and_space_names"
            android:entryValues="@array/settings_key_should_swap_punctuation_and_space_values"
            android:key="@string/settings_key_should_swap_punctuation_and_space"
            android:summary="@string/should_swap_punctuation_and_space_summary"
            android:title="@string/should_swap_punctuation_and_space_title" />


        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="@bool/settings_default_always_use_fallback_user_dictionary"
            android:key="@string/settings_key_always_use_fallback_user_dictionary"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/always_use_fallback_user_dictionary_off_summary"
            android:summaryOn="@string/always_use_fallback_user_dictionary_on_summary"
            android:title="@string/always_use_fallback_user_dictionary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="tweak_physical_keyboard_group"
        android:title="@string/tweak_physical_keyboard_group">

        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="true"
            android:key="use_keyrepeat"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/use_keyrepeat_off_summary"
            android:summaryOn="@string/use_keyrepeat_on_summary"
            android:title="@string/use_keyrepeat" />

        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="@bool/settings_default_hide_soft_when_physical"
            android:key="@string/settings_key_hide_soft_when_physical"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/hide_soft_when_physical_off_summary"
            android:summaryOn="@string/hide_soft_when_physical_on_summary"
            android:title="@string/hide_soft_when_physical" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="tweak_ux_group"
        android:title="@string/tweak_ux_group">

        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="true"
            android:key="insert_space_after_word_suggestion_selection"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/insert_space_after_word_suggestion_selection_off_summary"
            android:summaryOn="@string/insert_space_after_word_suggestion_selection_on_summary"
            android:title="@string/insert_space_after_word_suggestion_selection" />

        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="@bool/settings_default_cycle_all_symbols"
            android:key="@string/settings_key_cycle_all_symbols"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/cycle_all_symbols_keyboards_off_summary"
            android:summaryOn="@string/cycle_all_symbols_keyboards_on_summary"
            android:title="@string/cycle_all_symbols_keyboards" />

        <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
            android:defaultValue="@bool/settings_default_use_backword"
            android:key="@string/settings_key_use_backword"
            android:layout="@layout/skcheckboxpreference"
            android:persistent="true"
            android:summaryOff="@string/backword_support_off_summary"
            android:summaryOn="@string/backword_support_on_summary"
            android:title="@string/backword_support" />
    </PreferenceCategory>

</PreferenceScreen>