<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="special_dictionaries_group">

    <com.anysoftkeyboard.ui.settings.widget.SKPreference
        android:key="summary"
        android:layout="@layout/skpreference"
        android:summary="@string/special_dictionaries_group_summary" />

    <net.evendanan.pushingpixels.SwitchPreference
        android:defaultValue="true"
        android:key="candidates_on"
        android:persistent="true"
        android:summaryOff="@string/candidates_off_summary"
        android:summaryOn="@string/candidates_on_summary"
        android:title="@string/candidates_on" />

    <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
        android:defaultValue="@bool/settings_default_user_dictionary"
        android:dependency="candidates_on"
        android:key="@string/settings_key_use_user_dictionary"
        android:layout="@layout/skcheckboxpreference"
        android:persistent="true"
        android:summaryOff="@string/use_user_dictionary_off_summary"
        android:summaryOn="@string/use_user_dictionary_on_summary"
        android:textColor="@android:color/white"
        android:title="@string/use_user_dictionary" />

    <com.anysoftkeyboard.ui.settings.widget.SKPreference
        android:dependency="candidates_on"
        android:key="@string/user_dict_editor_key"
        android:layout="@layout/skpreference"
        android:title="@string/user_dict_editor" />

    <com.anysoftkeyboard.ui.settings.widget.SKPreference
        android:dependency="candidates_on"
        android:key="@string/next_word_dict_settings_key"
        android:layout="@layout/skpreference"
        android:title="@string/next_word_dict_settings" />

    <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
        android:defaultValue="true"
        android:dependency="candidates_on"
        android:key="quick_fix"
        android:layout="@layout/skcheckboxpreference"
        android:persistent="true"
        android:summaryOff=""
        android:summaryOn="@string/quick_fix_summary"
        android:title="@string/quick_fix" />

    <com.anysoftkeyboard.ui.settings.widget.SKPreference
        android:dependency="quick_fix"
        android:key="@string/abbreviation_dict_editor_key"
        android:layout="@layout/skpreference"
        android:title="@string/abbreviation_dict_editor" />

    <net.evendanan.pushingpixels.ListPreference
        android:defaultValue="@string/settings_default_auto_dictionary_add_threshold"
        android:dependency="candidates_on"
        android:dialogTitle="@string/use_auto_dictionary_dialog_title"
        android:entries="@array/auto_dictionary_threshold_types"
        android:entryValues="@array/auto_dictionary_threshold_values"
        android:key="@string/settings_key_auto_dictionary_threshold"
        android:summary="@string/use_auto_dictionary_summary"
        android:title="@string/use_auto_dictionary" />

    <com.anysoftkeyboard.ui.settings.widget.SKCheckBoxPreference
        android:defaultValue="@bool/settings_default_contacts_dictionary"
        android:dependency="candidates_on"
        android:key="@string/settings_key_use_contacts_dictionary"
        android:layout="@layout/skcheckboxpreference"
        android:persistent="true"
        android:summaryOff="@string/use_contacts_dictionary_off_summary"
        android:summaryOn="@string/use_contacts_dictionary_on_summary"
        android:title="@string/use_contacts_dictionary" />

</PreferenceScreen>