<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="prefs_keyboards_screen"
    android:title="@string/keyboards_group">

    <com.anysoftkeyboard.ui.settings.widget.SKPreference
        android:key="summary"
        android:layout="@layout/skpreference"
        android:summary="@string/keyboards_group_summary" />

    <PreferenceCategory
        android:key="keyboard_addons_group"
        android:title="@string/keyboards_group" />

    <!-- putting this at the end, so the user will get some kind of context (a list of keyboards, then how to get more -->
    <com.anysoftkeyboard.ui.settings.widget.AddOnStoreSearchPreference
        android:key="language"
        android:persistent="false"
        android:title="@string/search_market_for_keyboard_addons" />

</PreferenceScreen>